2003-09-04  Nick Clifton  <nickc@redhat.com>

	* config/tc-v850.c (set_machine): Accept v850e1 machine number.
	(md_pseudo_table): Add .v850e1 pseudo op.
	(md_show_usage): Document -mv850e1 switch.
	(md_parse_option): Accept -mv850e1 switch.
	(md_begin): Allow TARGET_CPU to be v850e1.
	* doc/c-v850.texi: Document -mv850e1 switch and .v850e1 pseudo op.
	* NEWS: Mention support for v850e1.

2003-09-04  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (md_parse_option): Add PPC_OPCODE_ANY to existing
	ppc_cpu selection rather than replacing.
	(ppc_set_cpu): Ignore and preserve PPC_OPCODE_ANY in ppc_cpu.
	(md_begin): When PPC_OPCODE_ANY, insert all opcodes in ppc_hash.

2003-09-03  Robert Millan  <robertmh@gnu.org>

	* configure.in: Match GNU/KFreeBSD with new kfreebsd*-gnu
	triplet.
	* configure: Regenerate.

2003-09-02  Daniel Jacobowitz  <drow@mvista.com>

	* configure.in: Update AC_PREREQ to 2.57.  Use AC_CONFIG_FILES
	and AC_CONFIG_COMMANDS instead of the three-argument AC_OUTPUT.
	Specify AC_CONFIG_AUX_DIR.
	* aclocal.m4: Regenerated with aclocal-1.7.
	* configure: Regenerated with autoconf 2.57.
	* Makefile.in, doc/Makefile.in: Regenerated with automake-1.7.

2003-08-29  Jakub Jelinek  <jakub@redhat.com>

	* dw2gencfi.c (cfi_pseudo_table): Add cfi_window_save.
	(dot_cfi, output_cfi_insn): Handle DW_CFA_GNU_window_save.
	(output_cie): Don't use DW_EH_PE_pcrel if neither DIFF_EXPR_OK
	nor tc_cfi_emit_pcrel_expr are defined.
	(output_fde): Use tc_cfi_emit_pcrel_expr if available and
	DIFF_EXPR_OK is not defined.
	* config/tc-sparc.h (TARGET_USE_CFIPOP): Define.
	(tc_cfi_frame_initial_instructions, tc_regname_to_dw2regnum,
	tc_cfi_emit_pcrel_expr): Define.
	(sparc_cfi_frame_initial_instructions, sparc_regname_to_dw2regnum,
	sparc_cfi_emit_pcrel_expr): New prototypes.
	(sparc_cie_data_alignment): New decl.
	(DWARF2_DEFAULT_RETURN_COLUMN, DWARF2_CIE_DATA_ALIGNMENT): Define.
	* config/tc-sparc.c: Include dw2gencfi.h.
	(sparc_cie_data_alignment): New variable.