@@ -2,4 +2,5 @@
 
 if [istarget frv*-*-*] {
     run_dump_test "allinsn"
+    run_dump_test "reloc1"
 }
